--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
   <header class="nav-bar">
     <div class="nav-inner">
       <a class="brand" href="index.html#top" aria-label="Uttarakhand Healthcare Summit Home">
-        <img src="velox logo.avif" alt="">
+        <img loading="lazy" src="velox logo.avif" alt="">
       </a>
 
       <button class="nav-toggle" data-nav-toggle type="button" aria-label="Toggle menu" aria-expanded="false">
@@ -75,19 +75,19 @@
               <div class="glimpsesRow__title">Inaugural Session</div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/inaugural/_VDS2264.webp"
                     alt="Inaugural gathering at the summit">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/inaugural/_VDS2298.webp"
                     alt="Inaugural stage setup">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/inaugural/_VDS2296.webp"
                     alt="Welcome address moments">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-1.webp" alt="Ceremonial lighting moment">
+                  <img loading="lazy" src="./imgs/overall/overall/inaugural/_VDS2303.webp" alt="Ceremonial lighting moment">
                 </figure>
               </div>
             </div>
@@ -96,18 +96,18 @@
               <div class="glimpsesRow__title">Welcome Address & Key Notes </div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/welcome/_VDS2218.webp"
                     alt="Panel discussion in progress">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/welcome/_VDS2237.webp"
                     alt="Curated session on stage">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-2.webp" alt="Expert speaker addressing the audience">
+                  <img loading="lazy" src="./imgs/overall/overall/welcome/_VDS2254.webp" alt="Expert speaker addressing the audience">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-3.webp" alt="Audience engagement during a session">
+                  <img loading="lazy" src="./imgs/overall/overall/welcome/_VDS2257.webp" alt="Audience engagement during a session">
                 </figure>
               </div>
             </div>
@@ -116,20 +116,20 @@
               <div class="glimpsesRow__title">Panel Discussions</div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/panel/_VDS2955.webp"
                     alt="Networking conversations at the venue">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/panel/_VDS3158.webp"
                     alt="Partnerships and collaboration">
                 </figure>
                 <figure class="glimpsesCard">
                   <img
-                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    src="./imgs/overall/overall/panel/_VDS3411.webp"
                     alt="Summit hall ambience">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                  <img loading="lazy" src="./imgs/overall/overall/panel/_VDS3638.webp" alt="Networking interactions">
                 </figure>
               </div>
             </div>
@@ -137,20 +137,26 @@
               <div class="glimpsesRow__title">Industry Presentations</div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/presentation/_VDS2923.webp"
                     alt="Networking conversations at the venue">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/presentation/_VDS2955.webp"
                     alt="Partnerships and collaboration">
                 </figure>
-                <figure class="glimpsesCard">
+                 <!-- <figure class="glimpsesCard">
                   <img
-                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    src="./imgs/overall/overall/presentation/_VDS3110.webp"
                     alt="Summit hall ambience">
-                </figure>
+                </figure> -->
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                  <img loading="lazy" src="./imgs/overall/overall/presentation/_VDS3577.webp" alt="Networking interactions">
+                </figure> 
+                <!-- <figure class="glimpsesCard">
+                  <img loading="lazy" src="./imgs/overall/overall/presentation/DSC02902.webp" alt="Networking interactions">
+                </figure> -->
+                <figure class="glimpsesCard">
+                  <img loading="lazy" src="./imgs/overall/overall/presentation/DSC02908.webp" alt="Networking interactions">
                 </figure>
               </div>
             </div>
@@ -158,20 +164,20 @@
               <div class="glimpsesRow__title">Exhibition Area and Networking Sessions</div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/networking/_VDS2860.webp "
                     alt="Networking conversations at the venue">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/networking/_VDS2861.webp"
                     alt="Partnerships and collaboration">
                 </figure>
                 <figure class="glimpsesCard">
                   <img
-                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    src="./imgs/overall/overall/networking/_VDS2869.webp"
                     alt="Summit hall ambience">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                  <img loading="lazy" src="./imgs/overall/overall/networking/_VDS2875.webp" alt="Networking interactions">
                 </figure>
               </div>
             </div>
@@ -179,20 +185,20 @@
               <div class="glimpsesRow__title">Excellence Awards Ceremony</div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/awards/_VDS3802_11zon.webp"
                     alt="Networking conversations at the venue">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                  <img loading="lazy" src="./imgs/overall/overall/awards/_VDS3841_11zon.webp"
                     alt="Partnerships and collaboration">
                 </figure>
                 <figure class="glimpsesCard">
                   <img
-                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    src="./imgs/overall/overall/awards/_VDS3863_11zon.webp"
                     alt="Summit hall ambience">
                 </figure>
                 <figure class="glimpsesCard">
-                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                  <img loading="lazy" src="./imgs/overall/overall/awards/DSC03011_11zon.webp" alt="Networking interactions">
                 </figure>
               </div>
             </div>
@@ -205,7 +211,7 @@
       <div class="wrap footer2__inner">
         <div class="footer2__brandBlock">
           <a class="brand" href="index.html#top" aria-label="Uttarakhand Healthcare Summit Home">
-            <img src="./veloxx_w.webp" alt="">
+            <img loading="lazy" src="./veloxx_w.webp" alt="">
           </a>
           <p class="footer2__tagline">Uttarakhand Healthcare &amp; Innovation Summit 2026</p>
         </div>
