--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
         <div class="wrap_gallery">
           <div class="glimpsesRows">
       <div class="glimpsesRow reveal">
-              <div class="glimpsesRow__title">Welcome Address & Key Notes </div>
+              <div class="glimpsesRow__title">Welcome </div>
               <div class="glimpsesRow__grid">
                 <figure class="glimpsesCard">
                   <img loading="lazy" src="./imgs/overall/overall/welcome/_VDS2218.webp"
